--- a/foundry.toml
+++ b/foundry.toml
@@ -1,4 +1,9 @@
 [profile.default]
-src = "contracts"
-out = "out"
-libs = ["lib"]
+src = 'contracts'
+out = 'out'
+libs = ['lib', "node_modules"]
+
+[fmt]
+line_length = 120
+multiline_func_header = "params_first"
+number_underscore = "thousands"
