chore: add deploy script and test

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,9 @@
 # Compiler files
 cache/
 out/
-
-# Ignores development broadcast logs
-!/broadcast
-/broadcast/*/31337/
-/broadcast/**/dry-run/
+broadcast/
 
 node_modules/
-
-# Docs
-docs/
 
 # Dotenv file
 .env
