chore: add `@bnb-chain/greenfield-contracts` to dependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "@bnb-chain/greenfield-contracts-sdk": "^0.0.5",
+    "@bnb-chain/greenfield-contracts": "^0.0.8",
+    "@bnb-chain/greenfield-contracts-sdk": "0.0.5",
     "@openzeppelin/contracts": "^4.8.3",
     "@openzeppelin/contracts-upgradeable": "^4.8.3"
   }
